--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -42,7 +42,9 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Decode JSON Secret
-        run: echo "${{ secrets.GCP_GAR_SA_CREDENTIALS }}" | base64 -d > gar_sa_credentials.json
+        run: 
+        echo "${{ secrets.GCP_GAR_SA_CREDENTIALS }}" | base64 -d > gar_sa_credentials.json
+        echo gar_sa_credentials.json
 
 
       - id: 'auth'
