--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -56,17 +56,29 @@ jobs:
           # Either user Workload Identity Federation or Service Account Keys. See
           # above more more examples
 
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+        with:
+          project_id: '${{vars.GCP_PROJECT_ID}}'
+
       # This example uses the docker login action
-      - uses: 'docker/login-action@v1'
+      - name: Docker Auth
+        uses: 'docker/login-action@v1'
         with:
           registry: '${{vars.GCP_LOCATION}}-docker.pkg.dev'
           username: 'oauth2accesstoken'
           password: '${{ steps.auth.outputs.access_token }}'
 
-      - name: Build/Push Dockerfile to ACR
+      - name: Build/Push Dockerfile to GAR
         shell: bash
         run: |
           docker build . \
             -t ${{vars.GCP_LOCATION}}-docker.pkg.dev/${{vars.GCP_PROJECT_ID}}/${{vars.GCP_GAR_REPO}}/${{ github.event.repository.name }}:latest
 
           docker push ${{vars.GCP_LOCATION}}-docker.pkg.dev/${{vars.GCP_PROJECT_ID}}/${{vars.GCP_GAR_REPO}}/${{ github.event.repository.name }}:latest
+
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-appengine@v1'
+        with:
+          project_id: '${{vars.GCP_PROJECT_ID}}'
+          image_url: '${{vars.GCP_LOCATION}}-docker.pkg.dev/${{vars.GCP_PROJECT_ID}}/${{vars.GCP_GAR_REPO}}/${{ github.event.repository.name }}:latest'
