add naive build workflow

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,7 +2,7 @@ name: Package
 # run-name: ${{ inputs.version }}
 
 on:
-  push:
+  # push:
   workflow_dispatch:
     # inputs:
     #   version:
@@ -45,7 +45,6 @@ jobs:
         run: |
           echo "${{ secrets.GCP_GAR_SA_CREDENTIALS }}" | base64 -d > gar_sa_credentials.json
           cat gar_sa_credentials.json
-
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
