--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,17 +57,24 @@ jobs:
           npm install && tsc
           cd ../
       
+
+      - name: Move Content to APP dir
+        run: |
+          mkdir app && mv client app/client && mv output/src/* app && mv app/index.js app/server.js
+          mv package.json app/package.json
+          mv gcp-gap-configurations/app-standard.yaml app/app.yaml
+          cd app
+
       - name: Compile app.yaml
         uses: ikuanyshbekov/app-yaml-env-compiler@v1.0
         env:
           SMTP_USER: ${{vars.SMTP_USER}}
           SMTP_PWD: ${{ secrets.SMTP_SECRET }}
     
-      - name: Move Content to APP dir
+      - name: Move Back
         run: |
-          mkdir app && mv client app/client && mv output/src/* app && mv app/index.js app/server.js
-          mv package.json app/package.json
-          mv gcp-gap-configurations/app-standard.yaml app/app.yaml
+          cd ../
+    
 
       - name: Zip Web App
         uses: vimtor/action-zip@v1
