config app engine secrets env vars

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
         uses: ikuanyshbekov/app-yaml-env-compiler@v1.0
         env:
           SMTP_USER: ${{vars.SMTP_USER}}
-          SMTP_PWD: ${{ secrets.SMTP_SECRET }}
+          SMTP_PWD: ${{ secrets.SMTP_PWD }}
     
       - name: Move Back
         run: |
