--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,4 +116,4 @@ jobs:
         run: |
           gcloud info
           unzip web-app.zip -d web-app-directory
-          gcloud app deploy web-app-directory --promote --stop-previous-version
+          gcloud app deploy web-app-directory --no-cache --promote --stop-previous-version
