add static handler

--- a/gcp-gap-configurations/app-standard.yaml
+++ b/gcp-gap-configurations/app-standard.yaml
@@ -7,6 +7,10 @@ env_variables:
   SMTP_PWD: $SMTP_PWD
 
 
+handlers:
+  - url: /static
+    static_dir: /client
+
 # handlers:
 # - url: /stylesheets
 #   static_dir: stylesheets
